Changes in robustHD version 0.7.0

    + Function partialOrder() for finding the order of the smallest or largest
      values of a vector is now exported.



Changes in robustHD version 0.6.1

    + Internal C++ functions for testing are now properly registered.


Changes in robustHD version 0.6.0

    + Method for function weights() is now used to retrieve robustness weights
      from objects of class "sparseLTS" (with argument type = "robustness").

    + C++ functions are now properly registered.

    + The alternative back end for sparse least trimmed squares from package
      sparseLTSEigen is no longer supported and can no longer be used.



Changes in robustHD version 0.5.1

    + Explicitly calling C++ function std::abs() rather than abs() to avoid
      clang warning.

    + Correctly importing functions head() and tail() from package 'utils' and
      function devAskNewPage from package 'grDevices'.



Changes in robustHD version 0.5.0

    + Added functionality for (robust) groupwise least angle regression.

    + Added TopGear car data.

    + Diagnostic plots now allow to pass arguments to covMcd().

    + Removed PCA step from data cleaning RLARS to consolidate code.

    + Updated package dependencies.



Changes in robustHD version 0.4.0

    + sparseLTS() no longer uses subsampling algorithm in the special case of
      alpha = 1.

    + sparseLTS() now has argument 'normalize' to specify whether the predictor
      variables should be normalized.

    + sparseLTS() now computes objective function with coefficients for
      normalized data (if applicable).

    + Most required packages are now imports rather than depends.



Changes in robustHD version 0.3.2

    + Bugfixes in sparseLTS() preventing errors for high-dimensional data.


Changes in robustHD version 0.3.1

    + rlars now uses perryFit() instead of perryTuning() for prediction error
      estimation.

    + Bugfix in rlars() allowing the number of variables to be sequenced to be