@@ -68,8 +68,6 @@ S3method(rtslarsP,default)
 S3method(rtslarsP,formula)
 S3method(sparseLTS,default)
 S3method(sparseLTS,formula)
-S3method(sparseLTSGrid,default)
-S3method(sparseLTSGrid,formula)
 S3method(tslars,default)
 S3method(tslars,formula)
 S3method(tslarsP,default)
@@ -78,7 +76,6 @@ S3method(weights,sparseLTS)
 S3method(winsorize,data.frame)
 S3method(winsorize,default)
 S3method(winsorize,matrix)
-S3method(wt,sparseLTS)
 export(coefPlot)
 export(corHuber)
 export(critPlot)
@@ -93,13 +90,11 @@ export(robStandardize)
 export(rtslars)
 export(rtslarsP)
 export(sparseLTS)
-export(sparseLTSGrid)
 export(standardize)
 export(tsBlocks)
 export(tslars)
 export(tslarsP)
 export(winsorize)
-export(wt)
 import(MASS)
 import(ggplot2)
 import(parallel)
