@@ -1,5 +1,7 @@
 Changes in robustHD version 0.7.0
 
+    + Removed deprecated functions.
+
     + Function partialOrder() for finding the order of the smallest or largest
       values of a vector is now exported.
 
